# RmapDifyChatbot

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  README.md  README.md.tmp  RELEASE_NOTES_milestone-routing-stable-v1.md  RELEASE_v0.4.0.md  pyproject.toml  setup_poetry_env.sh
.secrets/: kr_dataset_id.txt
config/: RMAP Chatbot Iterative Retrieval.yml  RMAP Chatbot Iterative Retrieval.yml.bak  RMAP Chatbot Meta Routing.yml  RMAP Chatbot.yml  RMAP_test_export.yml
dify_query/: graphql_query.py  metadata_query.py  test_weaviate_connection.py
dify_uploader/: __init__.py  __main__.py  author_extraction.py  baml_author_parser.py  cli.py  client.py  config.py  metadata.py  workflows.py
docs/: embeddings.md  metadata.md  roadmap.md  targets.md  technical-guide.md  test-cases.md  timing.md  weekly-2026-07-24.md  welcome_email_testers.md
scripts/: build_dsl.py  debug_route_draft.sh  debug_route_runtime.sh  export_dify_dsl.sh  extract_dsl_code.py  fix_kr_dataset.sh  import_dify_dsl.sh  migrate_direct_passthrough.py  migrate_to_3llm.py  push_metadata.py  regenerate_two_turn_report.py  restore_kr_dataset.sh  slurm_bulk_two_pass_ollama.sh  slurm_bulk_upload_pc.sh  slurm_extract_metadata.sh  slurm_extract_metadata_32b.sh  slurm_extract_metadata_qwen32b.sh  update_dify_metadata.py  upload_metadata.sh
slurm/: author-extraction-baml-qwen32-g3-turing.sbatch  author-extraction-baml-qwen32.sbatch  author-extraction-baseline.sbatch
workflow_scripts/: README.md  fetch_full_paper.py  final_answer_sanitizer.py  follow_up_memory_subset.py  kr_chunk_filter.py  (+5 more)
(+15 files in other folders)
