[project]
name = "rmap-chatbot"
version = "0.3.2"
description = "Metadata-aware Dify chatbot operations and paper ingestion tooling."
authors = [
    {name = "Philipp Wiesenbach",email = "philipp.wiesenbach@uni-heidelberg.de"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pypdf (>=6.10.2,<7.0.0)",
    "baml-py (>=0.222.0,<0.223.0)",
    "typing-extensions (>=4.10.0,<5.0.0)",
    "pydantic (>=2.8.0,<3.0.0)"
]

[project.scripts]
dify-upload = "dify_uploader.cli:main"

[tool.poetry]
packages = [{ include = "dify_uploader" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
